BUGFIX: VideoBlock now looks better when the column it is in is too wide for the video thumbnail

--- a/jetstream/static/jetstream/css/blocks/video-block.less
+++ b/jetstream/static/jetstream/css/blocks/video-block.less
@@ -1,8 +1,10 @@
 .video-block {
   position: relative;
+  background-color: black;
 
   iframe {
     display: block;
+    margin: auto;
   }
 }
 
